src/test/deca/context/invalid/lvalue_selection_protected/expression_not_subtype_of_current_class.deca
// Test of rule (3.66) : We try to access a protected field in
// a class that is a subclass of the class where is declared the
// protected field but expression type is not a subclass
// of the current class.

class A {
  protected int x_a = 2;
}

class B extends A {
  A a = new A();
  // current class (B) is a subclass of where is defined protected
  // field x_a (A)
  //  but
  // expression's type 'a' (A) is not subclass of current class (B)
  int x_b = a.x_a;
}

{
  B b = new B();
  println(b.x_b);
}

// Output:
//# a

